added repo link

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
       </main>
 
       <footer>
-        &copy; 2018 Andreas Heimann
+        &copy; 2018 Andreas Heimann<br />
+        <a href="http://github.com/AndreasWebdev/rock-paper-scissors">Check out the code on GitHub</a>
       </footer>
 
       <script src="assets/js/app.js"></script>
